fixing some layout issue in smallscreen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -216,6 +216,7 @@ input, select, textarea {
 
 	header {
 		margin-bottom: 1em;
+		position: relative;
 	}
 
 		header h1, header h2, header h3, header h4, header h5, header h6 {
@@ -2440,6 +2441,16 @@ input, select, textarea {
 					margin-top: 2em;
 				}
 
+        /* Image icons */
+        .image.icons {
+            float: none;
+            display: inline-block;
+            width:  200px;
+            height: 200px;
+            object-fit: cover;
+        }
+
+
 	}
 
 /* Mobile */
@@ -2515,24 +2526,6 @@ input, select, textarea {
 				}
         /* Top Nav Sections */
 
-        .topnav a, .topnav input[type=text], .topnav .dropdown{
-            display: inline-block;
-            text-align: center;
-            width: 100%;
-            margin: 0;
-        }
-
-        .dropbtn {
-          font-size: 17px;
-          border: none;
-          outline: none;
-          color: #f9f9f9;
-          background-color: #f2f2f2;
-          font-family: inherit;
-          margin: 0;
-          cursor: pointer;
-        }
-
         .topnav a, .topnav input[type=text], .topnav .dropdown .dropbtn{
             display: inline-block;
             text-align: center;
@@ -2563,11 +2556,37 @@ input, select, textarea {
             border: 1px solid #ccc;
         }
 
+        .topnav a, .topnav input[type=text], .topnav .dropdown{
+            display: inline-block;
+            text-align: center;
+            width: 100%;
+            margin: 0;
+        }
+
+        .dropbtn {
+          font-size: 17px;
+          border: none;
+          outline: none;
+          color: #f9f9f9;
+          background-color: #f2f2f2;
+          font-family: inherit;
+          margin: 0;
+          cursor: pointer;
+        }
 
 
-
+        /* Video */
         .video {
           object-fit: fill;
+        }
+
+        /* Image icons */
+        .image.icons {
+            float: none;
+            display: inline-block;
+            width:  200px;
+            height: 200px;
+            object-fit: cover;
         }
 
     }
@@ -2588,6 +2607,7 @@ input, select, textarea {
       padding: 14px 16px;
       text-decoration: none;
       font-size: 17px;
+      position: relative;
     }
 
 
@@ -2595,7 +2615,6 @@ input, select, textarea {
     .topnav a.active {
       background-color: #04AA6D;
       color: white;
-      position: relative;
     }
 
     /* Change the color of links on hover */
@@ -2612,7 +2631,16 @@ input, select, textarea {
 
     .topnav .search-container {
     float: right;
-    padding-top: 10px;
+
+    font-size: 16px;
+      padding: 8px 10px;
+    }
+
+    /* Style the search results */
+    .search-result {
+      font-size: 16px;
+      color: white;
+      cursor: pointer;
     }
 
     .topnav input[type="text"] {
@@ -2639,7 +2667,8 @@ input, select, textarea {
       margin: 0;
       border: 1px solid transparent;
       border-radius: inherit;
-      background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat center;
+      background: transparent
+      url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat center;
       cursor: pointer;
       opacity: 1;
     }
@@ -2650,15 +2679,16 @@ input, select, textarea {
       box-shadow: 0 0 3px 0 #1183d6;
       border-color: #1183d6;
       outline: none;
+      cursor: pointer;
     }
 
-
-
-
-    .topnav .dropdown {
+    /* The dropdown container */
+    .dropdown {
       float: left;
       overflow: hidden;
     }
+
+
 
     .topnav a .dropdown{
       float: left;
@@ -2685,9 +2715,9 @@ input, select, textarea {
     }
 
     .topnav .dropdown-content {
+      position: relative;
       display: none;
       background-color: #f9f9f9;
-      overflow: hidden;
       box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
       width: 100%;
       z-index: 1;
@@ -2700,6 +2730,7 @@ input, select, textarea {
       text-decoration: none;
       display: block;
       text-align: center;
+      z-index: 15;
     }
 
 
@@ -2711,6 +2742,7 @@ input, select, textarea {
     /* Show the dropdown menu on hover */
     .topnav .dropdown:hover .dropdown-content {
       display: block;
+
     }
 
     .topnav .search-container button:hover{
@@ -2722,12 +2754,12 @@ input, select, textarea {
        position: absolute;
        left: 15%;
        right: 15%;
-       bottom: 30px;
+
        z-index: 15;
-       padding-top: 20px;
-       padding-bottom: 20px
+       padding-top: 20%;
+       padding-bottom: 20%;
        text-align: center;
-       font-size: 60px
+       font-size: 40px
     }
 
     form {
@@ -2740,3 +2772,4 @@ input, select, textarea {
     .video {
       object-fit: fill;
     }
+
